fixing array shift

--- a/style.css
+++ b/style.css
@@ -142,7 +142,7 @@ input:focus {
   transform: rotateX(360deg);
 }
 
-.speacialFlip {
+.specialFlip {
   transform: rotate3d(360, 0, 360, 360deg);
 }
 
